add citation for phone regex pattern

--- a/templates/positionscompanyrecruiters.j2
+++ b/templates/positionscompanyrecruiters.j2
@@ -12,6 +12,12 @@
     Copied from:
     https://stackoverflow.com/questions/26821463/regex-exact-match-first-and-last-name-with-one-space-between
 -->
+<!--
+    Citation for regex in pattern attribute of INSERT Recruiter form's input for "phone":
+    11/23/2022
+    Copied from:
+    https://stackoverflow.com/questions/16699007/regular-expression-to-match-standard-10-digit-phone-number
+-->
 <!-- Adapted from the positionscompanyrecruiters_crud.html UI design -->
 <head>
     <title>Positions and Recruiters</title>
