--- a/templates/positionscompanyrecruiters.j2
+++ b/templates/positionscompanyrecruiters.j2
@@ -211,9 +211,9 @@
             <legend><strong>Add Position</strong></legend>
             <fieldset>
                 <label for="company-names">Company Name</label>
-                    <select class="form-control" name="company-names" id="company-names" required>
-                        <option value="NULL" selected>NULL</option>
-                        {% for company in companies %}
+                    <select class="form-control" name="company-names" id="company-names">
+                        <option value="None" selected>None</option>
+                        {% for company in company_data %}
                             <option value="{{ company['companyID'] }}"> {{company['name']}}</option>
                         {% endfor %}
                     </select>
@@ -221,7 +221,7 @@
                 <input 
                     type="text" 
                     class="form-control"
-                    id="pos-title" name="pos-title" 
+                    id="title" name="title" 
                     placeholder=""
                     required
                 />
