--- a/templates/positionscompanyrecruiters.j2
+++ b/templates/positionscompanyrecruiters.j2
@@ -264,19 +264,19 @@
             <fieldset>
                 <label for="title">Position Title</label>
                     <select name="title" id="title">
-                        {% for position in positions %}
+                        {% for position in position_data %}
                             <option value="{{ position['positionID'] }}"> {{position['title']}}</option>
                         {% endfor %}
                     </select>
                 <label for="name">Recruiter Name</label>
                     <select name="name" id="name">
-                        {% for recruiter in recruiters %}
+                        {% for recruiter in recruiter_data %}
                             <option value="{{ recruiter['recruiterID'] }}"> {{recruiter['name']}}</option>
                         {% endfor %}
                     </select>
             </fieldset>
             <!-- Create 'Add Position and Recruiter Affiliation' and 'Cancel' buttons -->
-            <input type="submit" value="Add Position and Recruiter Affiliation" name="Add_Affiliation" class="btn btn-primary" style="margin:.5rem;">
+            <input type="submit" value="Add Affiliation" name="Add_Affiliation" class="btn btn-primary" style="margin:.5rem;">
             <a href='/positionscompanyrecruiters'>
                 <input class="btn" type="button" value="Cancel">
             </a>
