add maxlength attributes to inputs

--- a/templates/positionscompanyrecruiters.j2
+++ b/templates/positionscompanyrecruiters.j2
@@ -287,6 +287,7 @@
                     id="rec-name" name="rec-name" 
                     pattern="^[A-Z][a-z]+\s[A-Z][a-z]+$" 
                     placeholder="John Smith" 
+                    maxlength="50"
                     required
                 />
                 <label for="email">Email</label> 
@@ -295,6 +296,7 @@
                     class="form-control"
                     id="email" name="email" 
                     placeholder="smithj@gmail.com"
+                    maxlength="50"
                 />
                 <label for="phone">Phone</label> 
                 <input 
@@ -309,18 +311,20 @@
                     type="text" 
                     class="form-control"
                     id="linkedin" name="linkedin" 
+                    maxlength="100"
                 />
                 <label for="lastContacted">Last Contacted</label> 
                 <input 
                     type="date" 
                     class="form-control"
-                    id="lastContacted" name="lastContacted" 
+                    id="lastContacted" name="lastContacted"
                 />
                 <label for="details">Details</label> 
                 <input 
                     type="text" 
                     class="form-control"
                     id="details" name="details" 
+                    maxlength="500"
                 />
             </fieldset>
             <!-- Create 'Add Recruiter' and 'Cancel' buttons -->
