Updated DDL to change optional attributes of Recruiters table, added serve code for Add Recruiter

--- a/templates/positionscompanyrecruiters.j2
+++ b/templates/positionscompanyrecruiters.j2
@@ -284,7 +284,7 @@
                 <input 
                     type="text" 
                     class="form-control"
-                    id="rec-name" name="rec-name" 
+                    id="name" name="name" 
                     pattern="^[A-Z][a-z]+\s[A-Z][a-z]+$" 
                     placeholder="John Smith" 
                     maxlength="50"
