Added Update recruiter server code, fixed typo in route in j2 file

--- a/templates/edit_recruiter.j2
+++ b/templates/edit_recruiter.j2
@@ -21,7 +21,7 @@
 
     <div id='edit'>
         <!-- form to UPDATE a Recruiter -->
-        <form id="editRecruiter" action="/edit-position/{{data[0].recruiterID}}" method="post">
+        <form id="editRecruiter" action="/edit-recruiter/{{data[0].recruiterID}}" method="post">
             <legend><strong>Update Recruiter</strong></legend>
             <fieldset>
                 <label>ID: <span>{{data[0].recruiterID}}</span></label>
