Added DELETE Affiliation server code, fixed minor bugs

--- a/templates/delete_positionsrecruiters.j2
+++ b/templates/delete_positionsrecruiters.j2
@@ -31,7 +31,7 @@
                 class="btn btn-primary" 
                 style="margin:.5rem;"
             />
-            <a href='/applications'>
+            <a href='/positionscompanyrecruiters'>
                 <input class="btn" type="button" value="Cancel">
             </a>
         </form>
