--- a/templates/positionscompanyrecruiters.j2
+++ b/templates/positionscompanyrecruiters.j2
@@ -125,6 +125,7 @@
                     <th>Recruiter Name</th>
                     <th>Recruiter ID</th>
                     <th>Position ID</th>
+                    <th>Affiliation ID</th>
                 </tr>
             </thead>
         
