--- a/templates/search_application.j2
+++ b/templates/search_application.j2
@@ -6,9 +6,17 @@
 
 <body>
 
+<h1>Applications</h1>
+
+    <a href="/">Home</a> |
+    <a href="/applicants">Applicants</a> |
+    <a href="/applications">Applications</a> |
+    <a href="/companies">Companies</a> |
+    <a href="/positionscompanyrecruiters">Positions & Company Recruiters</a></p>
+
 <!-- BROWSE -->
     <div id='searchApplication'>
-        <h3>Search Results</h3>
+        <h3>Applications Search Results</h3>
         <table>
         <!-- Access data passed from app.py -->
             <thead>
@@ -49,6 +57,11 @@
 
         </table>
         <p>&nbsp;</p>
+
+        <!-- Return to All Applications Button -->
+        <a href='/applications'>
+                <input class="btn" type="button" value="Return to All Applications">
+            </a>
     </div>
     <!-- END BROWSE -->
 
