fix conditional for displaying 'result' attr.

--- a/templates/applications.j2
+++ b/templates/applications.j2
@@ -80,7 +80,7 @@
                     </td>
 
                 {% for key in item.keys() %}
-                    {% if key == result %}
+                    {% if key == 'result' %}
                         {% if item[key] == 0 %}
                             <td>Submitted</td>
                         {% elif item[key] == 1 %}
