add placeholders to inputs

--- a/templates/applicants.j2
+++ b/templates/applicants.j2
@@ -111,12 +111,18 @@
                     class="form-control" 
                     id="name" name="name" 
                     pattern="^[A-Z][a-z]+\s[A-Z][a-z]+$" 
-                    placeholder="" 
+                    placeholder="John Smith" 
                     required
                 />
 
                 <label for="email">Email: </label>
-                <input type="email" class="form-control" id="email" name="email" placeholder="" required>
+                <input 
+                    type="email" 
+                    class="form-control" 
+                    id="email" name="email" 
+                    placeholder="smithj@gmail.com" 
+                    required
+                />
             </fieldset>
 
             <!-- Create 'Add Applicant' and 'Cancel' buttons -->
