--- a/templates/companies.j2
+++ b/templates/companies.j2
@@ -103,7 +103,7 @@
                     type="text" 
                     class="form-control" 
                     id="company" name="company"
-                    placeholder="" 
+                    placeholder="Google" 
                     required
                 />
 
@@ -112,7 +112,7 @@
                     type="url" 
                     class="form-control" 
                     id="website" name="website"
-                    placeholder="" 
+                    placeholder="google.com" 
                 />
 
                 <label for="description">Description: </label> 
