--- a/templates/positionscompanyrecruiters.j2
+++ b/templates/positionscompanyrecruiters.j2
@@ -243,7 +243,7 @@
                     type="text" 
                     class="form-control"
                     id="title" name="title" 
-                    placeholder=""
+                    placeholder="Software Engineer"
                     maxlength="100"
                     required
                 />
@@ -253,7 +253,7 @@
                     class="form-control"
                     id="location" name="location" 
                     maxlength="100"
-                    placeholder=""
+                    placeholder="Seattle"
                 />
                 <label for="salary">Salary</label> 
                 <input 
@@ -267,7 +267,7 @@
                     type="text" 
                     class="form-control"
                     id="link" name="link" 
-                    placeholder=""
+                    placeholder="apple.com"
                     maxlength="100"
                     required 
                 />
@@ -344,6 +344,7 @@
                     type="text" 
                     class="form-control"
                     id="linkedin" name="linkedin" 
+                    placeholder="linkedin.com/in/johnsmith"
                     maxlength="100"
                 />
                 <label for="lastContacted">Last Contacted</label> 
