edit style of buttons with anchors

--- a/templates/edit_applicant.j2
+++ b/templates/edit_applicant.j2
@@ -53,7 +53,7 @@
                 class="btn btn-primary" 
                 style="margin:.5rem;"
             />
-            <a href='/applicants'>
+            <a class="btn-anchor" href='/applicants'>
                 <input class="btn" type="button" value="Cancel">
             </a>
         </form>
