--- a/templates/edit_application.j2
+++ b/templates/edit_application.j2
@@ -59,7 +59,7 @@
                 class="btn btn-primary" 
                 style="margin:.5rem;"
             />
-            <a href='/applications'>
+            <a class="btn-anchor" href='/applications'>
                 <input class="btn" type="button" value="Cancel">
             </a>
         </form>
