--- a/templates/edit_company.j2
+++ b/templates/edit_company.j2
@@ -54,7 +54,7 @@
                 class="btn btn-primary" 
                 style="margin:.5rem;"
             />
-            <a href='/companies'>
+            <a class="btn-anchor" href='/companies'>
                 <input class="btn" type="button" value="Cancel">
             </a>
         </form>
