--- a/templates/edit_position.j2
+++ b/templates/edit_position.j2
@@ -70,7 +70,7 @@
                 class="btn btn-primary" 
                 style="margin:.5rem;"
             />
-            <a href='/positionscompanyrecruiters'>
+            <a class="btn-anchor" href='/positionscompanyrecruiters'>
                 <input class="btn" type="button" value="Cancel">
             </a>
         </form>
