--- a/templates/positionscompanyrecruiters.j2
+++ b/templates/positionscompanyrecruiters.j2
@@ -274,7 +274,7 @@
             </fieldset>
             <!-- Create 'Add Position' and 'Cancel' buttons -->
             <input type="submit" value="Add Position" name="Add_Position" class="btn btn-primary" style="margin:.5rem;">
-            <a href='/positionscompanyrecruiters'>
+            <a class="btn-anchor" href='/positionscompanyrecruiters'>
                 <input class="btn" type="button" value="Cancel">
             </a>
         </form>
@@ -301,7 +301,7 @@
             </fieldset>
             <!-- Create 'Add Position and Recruiter Affiliation' and 'Cancel' buttons -->
             <input type="submit" value="Add Affiliation" name="Add_Affiliation" class="btn btn-primary" style="margin:.5rem;">
-            <a href='/positionscompanyrecruiters'>
+            <a class="btn-anchor" href='/positionscompanyrecruiters'>
                 <input class="btn" type="button" value="Cancel">
             </a>
         </form>
@@ -363,7 +363,7 @@
             </fieldset>
             <!-- Create 'Add Recruiter' and 'Cancel' buttons -->
             <input type="submit" value="Add Recruiter" name="Add_Recruiter" class="btn btn-primary" style="margin:.5rem;">
-            <a href='/positionscompanyrecruiters'>
+            <a class="btn-anchor" href='/positionscompanyrecruiters'>
                 <input class="btn" type="button" value="Cancel">
             </a>
         </form>
@@ -382,7 +382,7 @@
                     </select>
             </fieldset>
             <input type="submit" value="Search Positions" name="Search_Position_By_Company" class="btn btn-primary" style="margin:.5rem;">
-            <a href='/positionscompanyrecruiters'>
+            <a class="btn-anchor" href='/positionscompanyrecruiters'>
                 <input class="btn" type="button" value="Cancel">
             </a>
         </form>
@@ -401,7 +401,7 @@
                     </select>
             </fieldset>
             <input type="submit" value="Search Positions" name="Search_Position_By_Title" class="btn btn-primary" style="margin:.5rem;">
-            <a href='/positionscompanyrecruiters'>
+            <a class="btn-anchor" href='/positionscompanyrecruiters'>
                 <input class="btn" type="button" value="Cancel">
             </a>
         </form>
