--- a/templates/applicants.j2
+++ b/templates/applicants.j2
@@ -127,7 +127,7 @@
 
             <!-- Create 'Add Applicant' and 'Cancel' buttons -->
             <input type="submit" value="Add Applicant" name="Add_Applicant" class="btn btn-primary" style="margin:.5rem;">
-            <a href='/applicants'>
+            <a class="btn-anchor" href='/applicants'>
                 <input class="btn" type="button" value="Cancel">
             </a>
         </form>
