--- a/templates/applications.j2
+++ b/templates/applications.j2
@@ -159,7 +159,7 @@
 
             <!-- Create 'Add Application' and 'Cancel' buttons -->
             <input type="submit" value="Add Application" name="Add_Application" class="btn btn-primary" style="margin:.5rem;">
-            <a href='/applications'>
+            <a class="btn-anchor" href='/applications'>
                 <input class="btn" type="button" value="Cancel">
             </a>
         </form>
