--- a/templates/companies.j2
+++ b/templates/companies.j2
@@ -127,7 +127,7 @@
 
             <!-- Create 'Add Company' and 'Cancel' buttons -->
             <input type="submit" value="Add Company" name="Add_Company" class="btn btn-primary" style="margin:.5rem;">
-            <a href='/companies'>
+            <a class="btn-anchor" href='/companies'>
                 <input class="btn" type="button" value="Cancel">
             </a>
         </form>
