--- a/templates/positionscompanyrecruiters.j2
+++ b/templates/positionscompanyrecruiters.j2
@@ -140,8 +140,12 @@
             </tbody>
         {% endif %}
         </table>
-        <th><a href="#" onClick="searchCompany()">Search by Company</a></th>
-        <th><a href="#" onClick="searchTitle()">Search by Title</a></th>
+        <a class="btn-anchor" href="#" onClick="searchCompany()">
+            <input class="btn" type="button" value="Search by Company">
+        </a>
+        <a class="btn-anchor" href="#" onClick="searchTitle()">
+            <input class="btn" type="button" value="Search by Title">
+        </a>
         <p>&nbsp;</p>
 
     <!-- Select (Show) Positions and Recruiters-->
