--- a/templates/companies.j2
+++ b/templates/companies.j2
@@ -112,7 +112,7 @@
                     type="url" 
                     class="form-control" 
                     id="website" name="website"
-                    placeholder="google.com" 
+                    placeholder="https://www.google.com" 
                 />
 
                 <label for="description">Description: </label> 
