--- a/templates/search_positions.j2
+++ b/templates/search_positions.j2
@@ -44,10 +44,9 @@
             </tbody>
 
         </table>
-        <p>&nbsp;</p>
 
         <!-- Return to All Applications Button -->
-        <a href='/positionscompanyrecruiters'>
+        <a class="btn-anchor" href='/positionscompanyrecruiters'>
                 <input class="btn" type="button" value="Return to All Positions">
             </a>
     </div>
