--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
+
 /* CSS RESET */
 
 *,
@@ -17,6 +19,7 @@ body {
     box-sizing: border-box;
     padding-left: 25px;
     padding-top: 15px;
+    font-family: 'Roboto', sans-serif;
 }
 
 button,
@@ -70,31 +73,71 @@ input:not([type='submit']):invalid {
 /* TABLE STYLES */
 
 table {
-    width: 750px;
-    margin-bottom: 5px;
-  }
+  width: 750px;
+  margin-bottom: 5px;
+}
   
-  form {
-    width: 400px;
-    margin-top: 10px;
-  }
+form {
+  width: 400px;
+  margin-top: 10px;
+}
   
-  form > button {
-    margin-left: 2px;
-    margin-top: 3px;
-    margin-bottom: 5px;
-  }
+form > button {
+  margin-left: 2px;
+  margin-top: 3px;
+  margin-bottom: 5px;
+}
   
-  fieldset {
-    display: flex;
-    flex-direction: column;
-    padding: 5px;
-  }
+fieldset {
+  display: flex;
+  flex-direction: column;
+  padding: 5px;
+}
   
-  table, th, td {
-    border: 1px solid black;
-  }
+/* table, th, td {
+  border: 1px solid black;
+}
   
-  th, td {
-    padding: 3px;
-  }
+th, td {
+  padding: 3px;
+} */
+
+.table-class {
+  border-collapse: collapse;
+  margin: 25px 0;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+}
+
+.table-class thead tr {
+  background-color: #78C4E3;
+  color: white;
+  text-align: left;
+}
+
+.table-class th,
+.table-class td {
+  padding: 12px 15px;
+}
+
+.table-class tbody tr {
+  border-bottom: 1px solid #dddddd;
+}
+
+.table-class tbody tr:nth-of-type(even) {
+  background-color: #f3f3f3;
+}
+
+.table-class tbody tr:last-of-type {
+  border-bottom: 2px solid #78C4E3;
+}
+
+.new-btn {
+  background-image: linear-gradient(#73b8ed, #3687b3);
+  color: white;
+  border: 1px solid #3687b3;
+  border-radius: 4px;
+  text-align: center;
+  padding: 4px 15px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15);
+  font-weight: 500;
+}
