edit table styles

--- a/static/style.css
+++ b/static/style.css
@@ -73,7 +73,8 @@ input:not([type='submit']):invalid {
 /* TABLE STYLES */
 
 table {
-  width: 750px;
+  /* width: 750px; */
+  width: max-content;
   margin-bottom: 5px;
 }
   
